# agent-dojo-mcp-server

./: .gitignore  README.md  SKILL.md  pyproject.toml  setup.sh
.github/workflows/: publish-to-mcp-hive.yml
src/: __init__.py
src/agent_dojo_mcp/: __init__.py  server.py
