[project]
name = "agent-dojo-mcp-server"
version = "0.1.0"
description = "MCP server for Agent Dojo - expert knowledge from curated development talks, powered by RAG + Knowledge Graph"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.0",
    "mcp>=1.14.1",
]

[project.scripts]
agent-dojo-mcp = "agent_dojo_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_dojo_mcp"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
